--- a/styles/pages/_preguntas.scss
+++ b/styles/pages/_preguntas.scss
@@ -1,3 +1,10 @@
+html {
+    height: 100%;
+} 
+Body {
+    height: 100%;
+    Overflow: hidden;
+} 
 
 .perfil-preguntas {      
     display: flex;
@@ -98,16 +105,16 @@
         }
 
     }
+}    
 
-    .columna-central {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+.columna-central {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
-    }
-
-    .contenedor-categorias {
+    #contenedor-categorias {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -118,19 +125,32 @@
         box-shadow: 0px 10px 19px 0px #000000bf;
         background-color: #ff2ea1;
 
+        h1 {
+            font-family: $probando-dos;
+            font-size: 25px;
+            text-shadow: 3px 2px 0 #00000038; 
+        }
 
-        .categorias {
-            width: 50%;
-            height: 20px;
-            font-family: $bubble-font;
+        .categoria {
+            width: 45%;
+            height: 30px;
+            line-height: 35px;
+            font-family: $probando-dos;
             font-size: 22px;
             text-align: center; 
             color: $border-color;
+            background-color: white;
             text-shadow: 3px 2px 0 #00000038; 
             margin: 7px 5px;
             border: 2px solid $border-color; 
             box-shadow: 0px 10px 19px 0px #000000bf;
-
+            cursor: pointer;
+            transition: .5s;
+            &:hover {
+                background-color: #a4a1a57e;
+                width: 50%;
+                height: 35px;
+            }
         }
         // .cat-1, cat-2, cat-3, cat-4 {
 
@@ -139,8 +159,11 @@
 
     }
 
-    // .contenedor-preguntas {
+.preguntas-visible {
+    display: none;
+}
+
+    // #contenedor-preguntas {
 
     // }
     
-}
